--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body,
+html {
+  margin: 0;
+  background: #333;
+  font-family: 'Roboto';
+}
